[package]
name = "lodestone_core"
description = "The backend for Lodestone"
homepage = "https://github.com/Lodestone-Team"
readme = "README.md"
version = "0.4.3"
edition = "2021"
license = "APGL-3.0"
exclude = ["target/*", "InstanceTest/*"]

[[bin]]
name = "test_ground"
path = "src/test_ground/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
argon2 = "0.4.1"
async-trait = "0.1.56"
axum = { version = "0.6.1", features = ["headers", "ws", "multipart"] }
axum-auth = "0.4.0"
axum-macros = "0.3.0"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
base64 = "0.20.0"
chrono = "0.4.22"
color-eyre = "0.6.2"
deno_ast = { version = "0.25.0", features = ["transpiling"] }
deno_core = "0.176.0"
deno_runtime = "0.102.0"
dotenvy = { version = "0.15" }
enum-kinds = "0.5.1"
enum_dispatch = "0.3.8"
fancy-regex = "0.10.0"
fs_extra = "1.2.0"
futures = "0.3.21"
futures-util = "0.3.14"
headers = "0.3"
home = "0.5.3"
igd = "0.12.0"
indexmap = { version = "1.0.2", features = ["serde-1"] }
indicatif = "0.15.0"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
local-ip-address = "0.5.0"
port_scanner = "0.1.5"
rand = "0.6.5"
rand_core = { version = "0.6", features = ["std"] }
rcon = { version = "0.6.0", features = ["rt-tokio"] }
reqwest = { version = "0.11.10", features = ["stream", "json"] }
ringbuffer = "0.8.5"
rs-snowflake = "0.6.0"
safe-path = { version = "0.1.0", git = "https://github.com/Lodestone-Team/safe_path_subset" }
sanitize-filename = "0.4.0"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.82"
sqlx = { version = "0.6.2", git = "https://github.com/Lodestone-Team/sqlx", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
sysinfo = "0.26.5"
tempdir = "0.3.7"
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["macros"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7.4"
tower-http = { version = "0.3.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "fmt",
    "local-time",
    "time",
] }
tracing-error = "0.2.0"
ts-rs = { version = "6.2.1", features = ["indexmap-impl"] }
walkdir = "2.3.2"
whoami = "1.2.3"
zip = "0.6.2"
openssl = { version = "0.10.45", features = ["vendored"], optional = true }
flate2 = "1.0.24"
tar = "0.4.38"
unrar = "0.4.4"
[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
vendored-openssl = ["dep:openssl"]
