[workspace]

members = [
    "core", # lodestone_core
    "dashboard/src-tauri" #lodestone-client
]
default-members = ["core"] # Run `cargo install tauri` then `cargo tauri build` to build the client
resolver = "2"

[profile.github-release]
inherits = "release"
strip = true
opt-level = "s"
lto = "thin"
codegen-units = 1

[workspace.package]
version = "0.5.1"
homepage = "https://github.com/Lodestone-Team"
readme = "README.md"
edition = "2021"
license = "APGL-3.0"
authors = ["Lodestone Team"]
rust-version = "1.70.0"
