[package]
name = "lodestone-client"
version = "0.4.4"
description = "Lodestone's Desktop Client"
authors = ["Lodestone-Team"]
license = ""
repository = ""
default-run = "lodestone-client"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "devtools", "updater"] }
tauri-plugin-localhost = "0.1.0"
portpicker = "0.1"
lodestone_core = {git = "https://github.com/Lodestone-Team/lodestone_core", branch = "main"}
tokio = { version = "1.21.1", features = ["macros", "rt"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
