[package]
name = "lodestone-client"
description = "Lodestone's Desktop Client"
default-run = "lodestone-client"
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "devtools", "system-tray", "updater"] }
tauri-plugin-localhost = "0.1.0"
portpicker = "0.1"
lodestone_core = { path = "../../core" }
tokio = { version = "1.21.1", features = ["macros", "rt"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
